--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,206 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Arimo&display=swap');
+
+*{
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Arimo', sans-serif;
+}
+body {
+ background-color:rgb(239, 239, 253);
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ flex-wrap: wrap;
+ height: 100vh;
+ width: 100vw;
+ font-family: 'Arimo', sans-serif;
+}
+html{
+  font-size: 100%;
+  height: 100%;
+}
+html{
+  background: #eee;
+}
+.box{
+  width: 25vw;
+  height: 70vh;
+  border-radius: 0.5rem;
+  box-shadow:0 0.2rem 3rem rgba(0, 0, 0, 0.322) ;
+  background: #85dacb;
+  position: relative;
+  overflow: hidden;
+  transform: translate3d(0,0,0);
+  min-width: 20rem;
+}
+.wave{
+opacity: 0.3;
+position: absolute;
+top: 120%;
+left: 50%;
+background: white;
+height: 50rem;
+width: 50rem;
+margin-left: -25rem;
+margin-top: -20rem;
+transform-origin: 50% 48%;
+border-radius: 43%;
+animation: drift 3000ms infinite linear;
+z-index: 1;
+}
+.wave.-three{
+  animation: drift 5000ms infinite linear;
+z-index: 2 !important;
+opacity: 0.2;
+}
+.wave.-two{
+  animation: drift 7000ms infinite linear;
+z-index: 1;
+opacity: 0.1;
+z-index: 3 !important;
+}
+.box:after{
+  content: "";
+  display: block;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 11;
+  transform: translate3d(0,0,0)
+}
+.inputField{
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  border-radius: 50px;
+  line-height: 30px;
+  width: 80%;
+}
+.inputData{
+  margin-top: 50%;
+}
+@keyframes drift {
+  from {
+    transform: rotate(0deg);
+  }
+  from{
+    transform: rotate(360deg);
+  }
+}
+.info{
+  position: absolute;
+  flex-direction: column;
+  width: 100%;
+  height: 60vh;
+  z-index: 4;
+}
+.location{
+  margin-top: -5.5rem;
+  text-align: center;
+  font-weight: 600;
+  font-size: 4rem;
+  text-transform: capitalize;
+}
+.fa-street-view{
+  animation: rotates 3s linear infinite alternate;
+}
+@keyframes rotates {
+  from {
+    transform: translateX(-0.5rem);
+  }
+  to{
+    transform: translateX(0.5rem);
+  }
+}
+#date{
+  text-align: center;
+  margin: 0.5rem;
+  color: #57606f;
+  font-size: 1.2rem;
+  font-weight: 300;
+  text-transform: uppercase;
+}
+.temp{
+  margin-top: 2.5rem;
+  text-align: center;
+  font-size: 3rem;
+}
+.tempmin_max{
+  text-align: center;
+  margin-top: 0.3rem;
+  font-weight: 300;
+  font-size: 1.2rem;
+  color: #57606f;
+}
+#weathercon{
+  height: 55%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3em;
+}
+#weathercon .fas{
+  font-size: 6rem;
+  animation: fas-anime 3s linear infinite alternate;
+}
+@keyframes fas-anime {
+  from {
+    transform: scale(1.1);
+  }
+  to{
+    transform: scale(1.5);
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@media (max-width: 600px){
+.box{
+  width: 90vw;
+  height: 80vh;
+}
+.wave{
+  top: 85%;
+}
+#weathercon{
+  font-size: 5rem;
+}
+.info{
+  font-size: 1.5rem;
+}
+@media (max-height: 500px){
+  .box{
+    height: 80vh;
+  }
+  .wave{
+    top: 115%;
+  }
+  body>span{
+    width: 100vw;
+    text-align: center;
+    color: grey;
+  }
+  .inputData{
+    width: 50%;
+    height: 10vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .inputField{
+    width: 50%;
+    margin: auto;
+    border-radius: 5rem;
+    padding: 1rem 1rem;
+    outline: none;
+    font-size:1.5rem ;
+  }
+  .errorMsg{
+    text-align: center;
+    font-size: 2rem;
+    margin: 2rem auto;
+  }
+}
+
 }
